--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "homepage": "https://github.com/rairoberto/geotipz#readme",
   "description": "",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-ruby-sass": "^2.1.1",
+    "gulp-sass": "^3.1.0"
   }
 }
